--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <title>944 Sensor Gauges</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <div id="log-input-container">
@@ -26,9 +26,9 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="/assets/js/vendor/raphael-2.1.4-min.js"></script>
-    <script type="text/javascript" src="/assets/js/vendor/justgage-1.2.9.min.js"></script>
-    <script type="text/javascript" src="/assets/js/vendor/jquery-3.7.1.slim.min.js"></script>
-    <script type="text/javascript" src="/assets/js/script.js"></script>
+    <script type="text/javascript" src="assets/js/vendor/raphael-2.1.4-min.js"></script>
+    <script type="text/javascript" src="assets/js/vendor/justgage-1.2.9.min.js"></script>
+    <script type="text/javascript" src="assets/js/vendor/jquery-3.7.1.slim.min.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
   </body>
 </html>
