--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000">
     <title>944 Sensor Gauges</title>
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
